test/successor_ml/should_not_compile/record_extension_pattern_1.sml
fun foo { a, b, ... = { a } } = ();
